dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([httpico], [0.1], [piotrek.bryk@gmail.com], [httpico])
AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CC
AC_PROG_CXX
AC_LANG([C++])
AC_PROG_LIBTOOL

AC_CONFIG_FILES(Makefile)
AC_OUTPUT

